--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "firebase-tools": "^8.13.1"
   }
 }
