--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "firebase deploy"
+    "deploy": "nuxt generate && firebase deploy"
   },
   "dependencies": {
     "core-js": "^3.6.5",
